docker/templates/nginx.conf.erb: Fixed as per http://wiki.nginx.org/PHPFcgiExample.

--- a/docker/templates/nginx.conf.erb
+++ b/docker/templates/nginx.conf.erb
@@ -43,6 +43,10 @@ http {
       fastcgi_pass unix:<%= config.php_fpm_socket %>;
       fastcgi_index index.php;
       include /etc/nginx/fastcgi_params;
+
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param PATH_INFO       $fastcgi_path_info;
+      fastcgi_param PATH_TRANSLATED $document_root$fastcgi_script_name;
     }
   }
 }
